Fixed scrollbar down-arrow sprite

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6989,7 +6989,7 @@ table thead .sort.desc{
     right: 5px;
     z-index: 1;
     width: 7px;
-    height: 9px;
+    height: 7px;
     background-position: -34px -56px;
     cursor:pointer;
     margin-bottom: 10px;
